--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
 
 <body>
   <div class="top-container">
-    <img class="top-cloud" src="/images/cloud.png" alt="cloud-img">
+    <img class="top-cloud" src="../images/cloud.png" alt="cloud-img">
     <h1>I'm Ryan.</h1>
     <p class="sub-title">a programmer, web developer, and IT technician.</p>
-    <img class="bottom-cloud" src="images/cloud.png" alt="cloud-img">
-    <img src="/images/mountain.png" alt="mountain-img">
+    <img class="bottom-cloud" src="..images/cloud.png" alt="cloud-img">
+    <img src="../images/mountain.png" alt="mountain-img">
   </div>
   <div class="middle-container">
     <div class="profile">
